[B]v12.0.0 (13.06.2013)[/B]
- Fix:    RTMP url and parameters of concerts changed
- Change: Version changed to 12 for Frodo and 11 for Eden

[B]v2.3.0 (15.02.2013)[/B]
- Update: Parameter handling changed.

[B]v2.2.0 (17.01.2013)[/B]
- Fix:    urlib.unquote_plus() changed to HTMLParser().unescape()

[B]v2.1.2 (03.01.2013)[/B]
- Fix:    Frodo version numbers for add-on and xbmc.python

[B]v1.1.2 (01.01.2013)[/B]
- Update: Compatibility fix for Eden and Frodo.

[B]v1.1.1 (24.12.2012)[/B]
- Fix:    Unicode issues fixed.

[B]v1.1.0 (21.12.2012)[/B]
- Change: xbmc.Player.play(url) to xbmc.Player.play(url, listitem) due to several guys complaining about none working videos.
- Update: Due to the set title in above listitem, in play mode the plugin now shows the artist name instead of the video filename.

[B]v1.0.7 (29.08.2012)[/B]
- Change: Language tag added to addon.xml.
- Change: Icon resized to 256x256 pixels.

[B]v1.0.6 (18.08.2012)[/B]
- Change: Description amended.

[B]v1.0.5 (03.08.2012)[/B]
- Change: Now additionally an audio add-on.

[B]v1.0.2 (09.02.2012)[/B]
- Change: endOfDirectory Success=yes/no and addDirectoryItem Folder=yes/no corrected

[B]v1.0.1 (31.01.2012)[/B]
- Change: Unescape HTML entities with HTMLParser().unescape(string)

[B]v1.0.0 (05.06.2011)[/B]
- Other: Initial release