@@ -1,3 +1,6 @@
+[B]v14.0.0 (30.12.2014)[/B]
+- Fix:    WDR changed the entire Rockpalast pages.
+
 [B]v12.0.0 (13.06.2013)[/B]
 - Fix:    RTMP url and parameters of concerts changed
 - Change: Version changed to 12 for Frodo and 11 for Eden
